<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_foryou">

    <fragment
        android:id="@+id/navigation_foryou"
        android:name="com.prenticedev.prenticeapp.ui.fragment.ForyouFragment"
        android:label="@string/for_you"
        tools:layout="@layout/fragment_foryou" />

    <fragment
        android:id="@+id/navigation_explore"
        android:name="com.prenticedev.prenticeapp.ui.fragment.ExploreFragment"
        android:label="@string/explore"
        tools:layout="@layout/fragment_explore" />

    <fragment
        android:id="@+id/navigation_compare"
        android:name="com.prenticedev.prenticeapp.ui.fragment.CompareFragment"
        android:label="@string/compare"
        tools:layout="@layout/fragment_compare" />
</navigation>