<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="8dp"
    app:cardCornerRadius="15dp"
    android:layout_marginTop="10dp"
    android:elevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/circleImageView"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tvUserComment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="13dp"
            android:text="@string/text_user_profile"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/circleImageView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvCommentTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_comment_time"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvCommentContent"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/text_comment_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/circleImageView" />

        <ImageView
            android:id="@+id/btnLike"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/baseline_favorite_border_24"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tvLikeValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_like_val"
            android:layout_marginEnd="8dp"
            android:textSize="16sp"
            android:layout_marginBottom="14dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnLike" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>