<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.CompanyExploreDetailActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginTop="3dp"
                android:background="alpha"
                android:src="@drawable/baseline_keyboard_arrow_left_24" />

            <TextView
                android:id="@+id/tvCompanyTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/text_company_title"
                android:textSize="20sp" />
        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/imCompany"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/gojek_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBar" />

    <TextView
        android:id="@+id/companyName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/text_company_name"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imCompany"
        app:layout_constraintTop_toBottomOf="@+id/appBar" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="9dp"
        android:src="@drawable/baseline_star_rate_24"
        app:layout_constraintStart_toEndOf="@+id/companyName"
        app:layout_constraintTop_toBottomOf="@+id/appBar" />

    <TextView
        android:id="@+id/tvRatingCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="11dp"
        android:text="@string/text_rating_value"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/appBar" />

    <Button
        android:id="@+id/btnAddReview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:text="@string/text_add_review_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBar" />

    <FrameLayout
        android:layout_width="320dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/btnAddReview" >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="lorem ipsum dolor"/>
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>