<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ExploreFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.SearchView
            android:id="@+id/searchView"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:hint="search here"
            app:iconifiedByDefault="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:queryHint="Cari Disini" />

        <ImageButton
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@color/white"
            android:src="@drawable/baseline_filter_list_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/searchView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvQuickF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="Quick Filters"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchView" />

        <HorizontalScrollView
            android:id="@+id/quickF"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:scrollbars="none"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvQuickF">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <Button
                    android:id="@+id/btnStartup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/filter_button_layout"
                    android:text="@string/btn_startup"
                    android:textSize="12sp" />

                <Space
                    android:layout_width="8dp"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/btnBUMN"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/filter_button_layout"
                    android:text="@string/btn_bumn"
                    android:textSize="12sp" />

                <Space
                    android:layout_width="8dp"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/btnFinance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/filter_button_layout"
                    android:text="@string/btn_finance"
                    android:textSize="12sp" />

                <Space
                    android:layout_width="8dp"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/btnFMCG"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/filter_button_layout"
                    android:text="@string/btn_fmcg"
                    android:textSize="12sp" />

                <Space
                    android:layout_width="8dp"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/btnGovt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/filter_button_layout"
                    android:text="@string/btn_govt"
                    android:textSize="12sp" />

            </LinearLayout>

        </HorizontalScrollView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvCompanies"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/quickF"
            tools:listitem="@layout/rv_item_company_explore" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
